@@ -6,8 +6,8 @@ import io.github.eventify.common.security.filter.JwtAuthenticationFilter;
 import io.github.eventify.common.security.oauth2.CustomOAuth2UserService;
 import io.github.eventify.common.security.oauth2.OAuth2AuthenticationFailureHandler;
 import io.github.eventify.common.security.oauth2.OAuth2AuthenticationSuccessHandler;
+import lombok.RequiredArgsConstructor;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.context.annotation.Bean;
@@ -16,10 +16,12 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
 import org.springframework.security.config.annotation.web.configurers.oauth2.server.resource.OAuth2ResourceServerConfigurer;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
@@ -36,14 +38,16 @@ import static org.springframework.security.config.http.SessionCreationPolicy.STA
     securedEnabled = true,
     jsr250Enabled = true
 )
+@RequiredArgsConstructor
 public class WebSecurityConfig implements WebMvcConfigurer {
+
+    private final SecurityProperties securityProperties;
 
     /**
      * Configure CORS & requests handling behaviour.
      **/
     @Bean
     public SecurityFilterChain filterChain(
-        final SecurityProperties securityProperties,
         final JwtAuthenticationFilter jwtAuthenticationFilter,
         final ApiKeyAuthenticationFilter apiKeyAuthenticationFilter,
         final CustomOAuth2UserService customOAuth2UserService,
@@ -54,9 +58,10 @@ public class WebSecurityConfig implements WebMvcConfigurer {
         http.addFilterAfter(apiKeyAuthenticationFilter, JwtAuthenticationFilter.class);
 
         http.oauth2ResourceServer(OAuth2ResourceServerConfigurer::disable);
-        http.cors(cors -> cors.configurationSource(corsConfigurationSource(securityProperties.getAllowedOrigins())));
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource()));
         http.csrf(AbstractHttpConfigurer::disable);
         http.sessionManagement(sessionConfiguration -> sessionConfiguration.sessionCreationPolicy(STATELESS));
+        http.headers(headers -> headers.frameOptions(HeadersConfigurer.FrameOptionsConfig::sameOrigin));
 
         http.exceptionHandling(
             handler -> handler.authenticationEntryPoint(
@@ -92,13 +97,18 @@ public class WebSecurityConfig implements WebMvcConfigurer {
         return http.build();
     }
 
-    private UrlBasedCorsConfigurationSource corsConfigurationSource(final String... origins) {
+    /**
+     * Configures CORS settings for the application.
+     */
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
         final CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(origins));
+        configuration.setAllowedOriginPatterns(List.of(securityProperties.getAllowedOrigins()));
         configuration.setAllowedMethods(List.of(WILDCARD));
         configuration.setAllowedHeaders(List.of(WILDCARD));
         configuration.setExposedHeaders(List.of(WILDCARD));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration(WILDCARD_PART, configuration);
